# polars-cli

./: .gitignore  Cargo.toml  README.md  dprint.json  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-version.yml  bump-versions.yml  lint.yml  release-drafter.yml  release.yml
docs/: index.md
python/polars-cli/: __main__.py
src/: highlighter.rs  interactive.rs  main.rs
